--- a/trunk/CardAcountBook/res/values/strings.xml
+++ b/trunk/CardAcountBook/res/values/strings.xml
@@ -48,13 +48,13 @@
 	
 	<string name="detete_my_card_dlg_title">카드 정보 수정 및 삭제</string>
 	<string name="delete_breakdown_stats_dlg_title">사용내역 정보 수정 및 삭제</string>
-	<string name="delete_b_stats_edit">사용내역 정보 수정 하기</string>
-	<string name="delete_b_stats_delete">사용내역 삭제 하기</string>
+	<string name="delete_b_stats_edit">정보 수정 하기</string>
+	<string name="delete_b_stats_delete">삭제 하기</string>
 	<string name="delete_b_alert_msg">정말 삭제 하시겠습니까?</string>
 	
 	<string name="delete_edit_cash_title">현금사용 정보 수정 및 삭제</string>
-	<string name="edit_cash_menu">현금사용 정보 수정하기</string>
-	<string name="delete_cash_menu">현금사용 삭제하기</string>
+	<string name="edit_cash_menu">정보 수정하기</string>
+	<string name="delete_cash_menu">삭제하기</string>
 	
 	<string name="my_card_add_init_payment_day">매월 0일</string>
 	<string name="my_card_add_init_card_type">신용</string>
@@ -233,7 +233,18 @@
     <string name="hyundai_r3">현대카드 R3</string>    
     <string name="hyundai_v">현대카드 V</string>
     <string name="hyundai_zero">현대카드 ZERO</string>    
-   
+    
+	<string name="notice_1_title">첫번째 공지사항</string>    
+	
+
+	
+	
+	<string name="app_method_title">이용방법 및 설명</string>
+    <string name="app_method">I-CARD를 이용해 주셔서 감사합니다. I-CARD는 결제문자를 자동으로 등록해 줍니다.
+         사용내역을 기간별, 카테고리별 등으로 볼수 있으며 월별 사용내역을 그래프로 볼수 있습니다. 
+         또한 현금사용도 추가할수있습니다. 카드추가는 현재 KB, NH, 롯데, 우리, 삼성, 신한, 현대카드를 할 수 있습니다.이 앱은 한성대학교 DoDream의 졸업작품입니다.
+         문의사항은 gazi6024@gmail.com kokowct@hotmail.com로 보내주세요~</string>
+    
     
     <string-array name="card_type_list">
         <item>신용</item>
